[gd_scene load_steps=11 format=3 uid="uid://corwnty7sr8xh"]

[ext_resource type="Script" path="res://Spells/SpellChest/SpellChest.gd" id="1_td6o6"]
[ext_resource type="Texture2D" uid="uid://by7eppwr7gj5f" path="res://Spells/SpellChest/Assets/chest_sprite_sheet.png" id="2_oqk16"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7bqff"]
atlas = ExtResource("2_oqk16")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvlfo"]
atlas = ExtResource("2_oqk16")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhp6g"]
atlas = ExtResource("2_oqk16")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_rtjk6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bqff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvlfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhp6g")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ij4mh"]
size = Vector2(28, 11)

[sub_resource type="Animation" id="Animation_dpms4"]
resource_name = "chest_open"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vybxq"]
_data = {
"chest_open": SubResource("Animation_dpms4")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_u8gwt"]
radius = 18.0

[node name="SpellChest" type="StaticBody2D"]
y_sort_enabled = true
position = Vector2(0, -3)
script = ExtResource("1_td6o6")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_rtjk6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 8.5)
shape = SubResource("RectangleShape2D_ij4mh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_vybxq")
}

[node name="InteractableArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableArea"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_u8gwt")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="InteractableArea" to="." method="_on_interactable_area_body_entered"]
[connection signal="body_exited" from="InteractableArea" to="." method="_on_interactable_area_body_exited"]
